# fancyplan

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_timer.sh  docker-compose.yml
src/: cache.rs  main.rs  scraper.rs  server.rs  upgrader.rs
src/public/: index.html  style.css  timer.js
