[package]
name = "fancyplan"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "fancyplan"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
nipper = "0.1.9"
redis = "0.23.3"
reqwest = "0.11.20"
url = "2.4.1"
